# ok-gloox

./: .gitignore  CMakeLists.txt  ChangeLog  config.h.unix  config.h.unix.in  config.h.win
.github/workflows/: ci.yml  release.yml  test.yml  ubuntu.yml  win.yml
cmake/: ok-glooxConfig.cmake
include/gloox/: adhoccommandprovider.h  amp.h  annotationshandler.h  atomicrefcount.h  attention.h  avatar.h  base64.h  bookmarkhandler.h  bookmarkstorage.h  (+118 more)
src/: CMakeLists.txt  Makefile.am  addresses.cpp  addresses.h  adhoc.cpp  adhoc.h  adhochandler.h  adhocplugin.h  amp.cpp  annotations.cpp  annotations.h  atomicrefcount.cpp  attention.cpp  avatar.cpp  base64.cpp  bob.cpp  bob.h  bookmarkstorage.cpp  bookmarkstorage.h  bytestream.h  bytestreamdatahandler.h  bytestreamhandler.h  capabilities.cpp  carbons.cpp  chatmarker.cpp  chatmarkerfilter.cpp  chatstate.cpp  chatstate.h  chatstatefilter.cpp  chatstatefilter.h  chatstatehandler.h  client.cpp  client.h  clientbase.cpp  clientbase.h  component.cpp  compressiondatahandler.h  compressiondefault.cpp  compressionzlib.cpp  conference.cpp  (+209 more)
src/examples/: Makefile.am  adhoc_example.cpp  annotations_example.cpp  bookmarkstorage_example.cpp  bosh_example.cpp  component_example.cpp  disco_example.cpp  e2ee_client.cpp  e2ee_server.cpp  flexoff_example.cpp  ft_recv.cpp  ft_send.cpp  linklocal_example.cpp  message_example.cpp  minimal_example.cpp  muc_example.cpp  prep_example.cpp  privacylist_example.cpp  privatexml_example.cpp  pubsub_example.cpp  reconnect_example.cpp  register_example.cpp  reset_example.cpp  roster_example.cpp  vcard_example.cpp
src/tests/: Makefile.am
src/tests/adhoc/: Makefile.am  adhoc_test.cpp
src/tests/adhoccommand/: Makefile.am  adhoccommand_test.cpp
src/tests/adhoccommandnote/: Makefile.am  adhoccommandnote_test.cpp
src/tests/amp/: amp_test.cpp
src/tests/amprule/: amprule_test.cpp
src/tests/base64/: base64_test.cpp
src/tests/capabilities/: Makefile.am  capabilities_test.cpp
src/tests/carbons/: Makefile.am  carbons_test.cpp
src/tests/chatstatefilter/: chatstatefilter_test.cpp
src/tests/client/: Makefile.am  client_test.cpp
src/tests/clientbase/: Makefile.am  clientbase_test.cpp
src/tests/connectionbosh/: connectionbosh_test.cpp
src/tests/connectiontcpserver/: connectiontcpserver_test.cpp
src/tests/dataform/: Makefile.am  dataform_test.cpp
src/tests/dataformfield/: Makefile.am  dataformfield_test.cpp
src/tests/dataformitem/: Makefile.am  dataformitem_test.cpp
src/tests/dataformreported/: Makefile.am  dataformreported_test.cpp
src/tests/delayeddelivery/: delayeddelivery_test.cpp
src/tests/disco/: Makefile.am  disco_test.cpp
src/tests/discoinfo/: Makefile.am  discoinfo_test.cpp
src/tests/discoitems/: Makefile.am  discoitems_test.cpp
src/tests/error/: error_test.cpp
src/tests/featureneg/: Makefile.am  featureneg_test.cpp
src/tests/flexoffline/: Makefile.am  flexoffline_test.cpp
src/tests/flexofflineoffline/: Makefile.am  flexofflineoffline_test.cpp
src/tests/forward/: Makefile.am  forward_test.cpp
src/tests/gpgencrypted/: gpgencrypted_test.cpp
src/tests/gpgsigned/: gpgsigned_test.cpp
src/tests/hint/: Makefile.am  hint_test.cpp
src/tests/inbandbytestream/: inbandbytestream_test.cpp
src/tests/inbandbytestreamibb/: inbandbytestreamibb_test.cpp
src/tests/iodata/: iodata_test.cpp
src/tests/iq/: iq_test.cpp
src/tests/jid/: jid_perf.cpp  jid_test.cpp
src/tests/jinglecontent/: jinglecontent_test.cpp
src/tests/jingleiceudp/: jingleiceudp_test.cpp
src/tests/jinglesession/: jinglesession_test.cpp
src/tests/jinglesessionjingle/: jinglesessionjingle_test.cpp
src/tests/jinglesessionmanager/: jinglesessionmanager_test.cpp
src/tests/lastactivity/: Makefile.am  lastactivity_test.cpp
src/tests/lastactivityquery/: Makefile.am  lastactivityquery_test.cpp
src/tests/md5/: md5_test.cpp
src/tests/message/: message_test.cpp
src/tests/messageeventfilter/: messageeventfilter_test.cpp
src/tests/messagemarkup/: Makefile.am  messagemarkup_test.cpp
src/tests/mucroommuc/: Makefile.am  mucroommuc_test.cpp
src/tests/mucroommucadmin/: Makefile.am  mucroommucadmin_test.cpp
src/tests/mucroommucowner/: Makefile.am  mucroommucowner_test.cpp
src/tests/mucroommucuser/: Makefile.am  mucroommucuser_test.cpp
src/tests/nickname/: nickname_test.cpp
src/tests/nonsaslauth/: nonsaslauth_test.cpp
src/tests/nonsaslauthquery/: nonsaslauthquery_test.cpp
src/tests/oob/: oob_test.cpp
src/tests/parser/: Makefile.am  parser_test.cpp
src/tests/prep/: prep_test.cpp
src/tests/presence/: presence_test.cpp
src/tests/privacymanager/: privacymanager_test.cpp
src/tests/privacymanagerquery/: privacymanagerquery_test.cpp
src/tests/privatexml/: privatexml_test.cpp
src/tests/pubsubevent/: Makefile.am  pubsubevent_test.cpp
src/tests/pubsubmanager/: Makefile.am  pubsubmanager_test.cpp
src/tests/pubsubmanagerpubsub/: Makefile.am  pubsubmanagerpubsub_test.cpp
src/tests/receipt/: receipt_test.cpp
src/tests/reference/: Makefile.am  reference_test.cpp
src/tests/registration/: Makefile.am  registration_test.cpp
src/tests/registrationquery/: Makefile.am  registrationquery_test.cpp
src/tests/rostermanager/: Makefile.am  rostermanager_test.cpp
src/tests/rostermanagerquery/: Makefile.am  rostermanagerquery_test.cpp
src/tests/search/: Makefile.am  search_test.cpp
src/tests/searchquery/: Makefile.am  searchquery_test.cpp
src/tests/sha/: sha_test.cpp
src/tests/shim/: shim_test.cpp
src/tests/simanager/: Makefile.am  simanager_test.cpp
src/tests/simanagersi/: simanagersi_test.cpp
src/tests/stanzaextensionfactory/: stanzaextensionfactory_perf.cpp
src/tests/subscription/: subscription_test.cpp
src/tests/tag/: tag_perf.cpp  tag_test.cpp
src/tests/tlsgnutls/: Makefile.am  tlsgnutls_test.cpp
src/tests/uniquemucroomunique/: Makefile.am  uniquemucroomunique_test.cpp
src/tests/util/: util_test.cpp
src/tests/vcard/: vcard_test.cpp
src/tests/vcardupdate/: vcardupdate_test.cpp
src/tests/xpath/: xpath_test.cpp
src/tests/zlib/: zlib_perf.cpp  zlib_test.cpp
(+1 files in other folders)
